--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 /* body */
 body {
-    background-image: url('../img/back.jpg');
+    background-image: url('../img/back01.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
