--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,11 @@
 /* body */
 body {
-    background-image: url('../img/back01.jpg');
+    background-color: skyblue;
+    /* background-image: url('../img/back01.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed; */
 }
 
 .box {
