--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 /* body */
 body {
     /* background-color: skyblue; */
-    background-image: url('../img/back01.jpg');
+    background-image: url('../img/bg_360.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
