--- a/css/estilo.css
+++ b/css/estilo.css
@@ -60,6 +60,7 @@ section {
     background-color: rgb(255, 255, 0);
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.25rem;
+    z-index: 99;
 }
 
 .dropdown-menu {
