--- a/css/estilo.css
+++ b/css/estilo.css
@@ -115,7 +115,7 @@ i {
     }
 
     .navbar {
-        background-color: rgba(0, 0, 255, 0.973);
+        background-color:rgba(245, 245, 245, 0.726);
         border-radius: 3px;
     }
 
@@ -123,12 +123,16 @@ i {
         padding: 0 20px 0 20px;
     }
 
+    .navbar-light .navbar-nav .nav-link {
+        color: grey;
+    }
+
     .navbar {
         padding: 0 40px 0 40px;
     }
 
     .dropdown-menu {
-        background-color:rgba(0, 0, 255, 0.973);
+        background-color:rgba(245, 245, 245, 0.856);
         font-size: 1.25rem;
     }
 
